@@ -1,3 +1,6 @@
+2009-09-08  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/util/prompt.jl: squashed the last compiler warnings [Matthew Love]
+
 2009-09-07  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/user.jl
 	* lisp/sawfish/wm/misc.jl
